monitoring/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: monitoring-cors-headers
  namespace: monitoring
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: false
    customFrameOptionsValue: "SAMEORIGIN"
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
